syntax = "proto3";

option csharp_namespace = "GrpcService3.Domain.Protos";

package grpcorder;

// The greeting service definition.
service GrpcOrder {
  // Sends a greeting
  rpc GetAll(OrderParamPaging) returns (OdersResponse);
  rpc GetById(IdRequest) returns(OrderDetailsResponse);
  rpc AddOrder(OrderDetailRequest) returns(OrderBaseResponse);
  rpc UpdateOrder(OrderDetailResponse) returns(OrderBaseResponse);
  rpc DeleteOrder(IdRequest) returns(OrderBaseResponse);
}

//order
message IdRequest{
	string Id =1;
}
message OrderDetailsResponse{
	repeated OrderDetailResponse orderDetail = 1;
}
message OrderDetailResponse{
	string OrderId = 1;
	string ProductId =2;
	int32 Quantity = 3;
	string OrderDetailId =4;
}
message OrderDetailRequest{
	string ProductId =1;
	int32 Quantity = 2;
}

message OrderParamPaging {
    int32 pageIndex=1;
    int32 pageSize =2;
}
message OdersResponse{
	repeated OrderResponse order=1;
}
message OrderResponse{
	string Id =1;
}

//base response
message OrderBaseResponse {
  bool status = 1;
}